tests/syntax_error/ee.jou
def foo() -> None:
    x = 1ee2.3  # Error: invalid number or variable name "1ee2.3"
